# aws-sdk

./: .env.sample  .gitignore  Makefile  config.py  pyproject.toml
src/: delete_aws.py  download_aws.py  download_file_aws.py  upload_aws.py  upload_with_presigned_url_aws.py
src/multi_part/: abort_all_multi_part_uploads.py  complete_multi_part_upload.py  generate_multi_part_upload_presigned_url.py  start_multi_part_upload_aws_sdk.py
