[tool.poetry]
name = "upload-aws"
version = "0.1.0"
description = ""
authors = ["DZ <adrianxwijaya@gmail.com>"]
readme = "README.md"
packages = [{include = "upload_aws"}]

[tool.poetry.dependencies]
python = "^3.8"
botocore = "^1.29.32"
requests = "^2.28.1"
boto3 = "^1.26.32"
python-dotenv = "^0.21.0"
black = "^23.1.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
